<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/add_device_dialog"
    android:orientation="vertical"
    android:padding="8dp">

<TextView
    android:text = "@string/changeUserPassText"
    android:layout_width="wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/textview"
    android:textAlignment="center"
    android:textSize="20sp"/>

<EditText
    android:layout_width = "wrap_content"
    android:layout_height = "wrap_content"
    android:id = "@+id/newUser"
    android:hint = "@string/newUserHint"
    android:focusable = "true"
    android:textColorHint = "@color/hint"
    android:textSize="20sp"
    android:maxLines="1"
    android:inputType="text"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newPass"
        android:textSize="20sp"
        android:textColorHint="@color/hint"
        android:hint="@string/newPassHint"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newPassCheck"
        android:textSize="20sp"
        android:textColorHint="@color/hint"
        android:hint="@string/newPassCheckHint"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oldPass"
        android:textSize="20sp"
        android:textColorHint="@color/hint"
        android:hint="@string/oldPassHint"
        android:maxLines="1"
        android:inputType="textPassword"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back_button"
        android:layout_marginRight="45dp"
        android:maxLines="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:text="@string/confirm"
        android:layout_marginLeft="45dp"
        android:maxLines="1"
        />
</LinearLayout>
</LinearLayout>